campaign feed design changes

--- a/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/drawer_layout.xml
@@ -141,29 +141,52 @@
             android:textSize="14sp"
             app:fontName="oswald.ttf" />
 
-
-        <com.mycity4kids.widget.CustomFontTextView
+        <LinearLayout
             android:id="@+id/rewardsTextView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_below="@+id/groupsTextView"
+            android:paddingLeft="30dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="12dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="@dimen/space_10"
+                android:tint="@color/app_red"
+                app:srcCompat="@drawable/ic_rupee_iconn" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/mymoney_logo" />
+        </LinearLayout>
+
+
+        <!--<com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/rewardsTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_below="@+id/groupsTextView"
             android:drawableLeft="@drawable/ic_rupee_iconn"
+            android:background="@drawable/mymoney_logo"
             android:drawablePadding="20dp"
+            android:visibility="gone"
             android:drawableTint="@color/app_red"
             android:gravity="center_vertical"
             android:paddingLeft="30dp"
             android:paddingTop="12dp"
             android:paddingRight="16dp"
             android:paddingBottom="12dp"
-            android:text="@string/momspresso_rewards"
             android:textAllCaps="true"
-            android:textSize="14sp"
-            app:fontName="oswald.ttf" />
+            app:fontName="oswald.ttf" />-->
 
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="@dimen/space_48"
             android:layout_below="@+id/groupsTextView"
             android:layout_alignParentRight="true">
 
@@ -304,7 +327,6 @@
             android:textSize="14sp"
             app:fontName="oswald.ttf" />
     </RelativeLayout>
-
 
 
 </ScrollView>
