--- a/MyCity4Kids/MyCity4Kids/res/drawable/subscribe_now.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/subscribe_now.xml
@@ -4,7 +4,7 @@
 
     <corners
         android:radius="@dimen/space_20" />
-    <solid android:color="@color/campagin_subscribe_now" />
+    <solid android:color="@color/campaign_apply_bg" />
 
 
 </shape>
