--- a/MyCity4Kids/MyCity4Kids/res/drawable/white_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/white_bg.xml
@@ -3,8 +3,9 @@
     android:shape="rectangle">
 
     <corners
-        android:radius="@dimen/space_20" />
-    <solid android:color="@color/campaign_completed_bg" />
+        android:bottomRightRadius="4dp"
+        android:bottomLeftRadius="4dp" />
+    <solid android:color="@color/white" />
 
 
 </shape>
