--- a/MyCity4Kids/MyCity4Kids/res/layout/explore_article_listing_type_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/explore_article_listing_type_fragment.xml
@@ -351,19 +351,18 @@
                         android:tint="@color/white"
                         app:srcCompat="@drawable/ic_rupee_icon" />
 
-                    <com.mycity4kids.widget.CustomFontTextView
+                    <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/rewardsTextView1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/rewardsImageView1"
-                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="@dimen/space_2"
+                        android:layout_marginRight="@dimen/space_2"
+                        android:background="@color/white"
                         android:paddingLeft="10dp"
                         android:paddingRight="10dp"
-                        android:text="@string/rewards_program"
-                        android:textAllCaps="true"
-                        android:textColor="@color/white"
-                        android:textSize="14sp"
-                        app:fontName="oswald_regular.ttf" />
+                        android:src="@drawable/mymoney_logo"
+                        android:text="@string/rewards_program" />
                 </RelativeLayout>
 
                 <RelativeLayout
