notification issue and many other issue fixed

--- a/MyCity4Kids/MyCity4Kids/res/layout/reward_campaign.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/reward_campaign.xml
@@ -45,12 +45,11 @@
 
             <ImageView
                 android:id="@+id/profile_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="@dimen/space_10"
-                android:padding="@dimen/space_10"
                 app:srcCompat="@drawable/profile_icon" />
 
             <View
