--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -248,10 +248,6 @@
                     android:src="@drawable/arrowdownnew" />
             </RelativeLayout>
 
-
-
-            <!--family layout start from here-->
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -266,6 +262,7 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
                     android:gravity="center"
+                    android:visibility="gone"
                     android:text="@string/rewards_family_header"
                     android:textColor="@color/app_grey"
                     android:textSize="14sp"
@@ -645,20 +642,17 @@
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/textAddChild"
-                    android:layout_width="wrap_content"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
-                    android:background="@color/app_red"
-                    android:paddingLeft="35dp"
-                    android:paddingTop="10dp"
-                    android:paddingRight="35dp"
-                    android:paddingBottom="10dp"
-                    android:text="@string/rewards_add_child"
-                    android:textColor="@color/white"
-                    app:fontName="oswald_regular.ttf"
-                    android:textSize="18sp"
-                    android:textStyle="bold" />
+                    android:background="@drawable/shape_rectangle_red"
+                    android:gravity="center"
+                    android:text="+"
+                    android:textColor="@color/app_red"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:fontName="oswald_regular.ttf" />
 
                 <android.support.v7.widget.AppCompatCheckBox
                     android:id="@+id/checkAreYouExpecting"
@@ -798,9 +792,6 @@
                     app:fontName="oswald_regular.ttf" />
 
             </LinearLayout>
-
-            <!---->
-
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/textSaveAndContinue"
