--- a/MyCity4Kids/MyCity4Kids/res/layout/reward_campaign.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/reward_campaign.xml
@@ -76,7 +76,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/campaign_register_feed_bg"
                 android:padding="@dimen/space_10"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <ImageView
                     android:layout_width="0dp"
