--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -500,6 +500,13 @@
     <color name="campaign_invite_only_bg">#8B572A</color>
     <color name="campaign_submit_proof_bg">#74B825</color>
     <color name="campaign_proof_reject_bg">#212121</color>
+    <color name = "campaign_proof_submitted">#73B926</color>
+    <color name = "campaign_proof_approval">#D3425A</color>
+    <color name = "campaign_payment_in_process">#F5B346</color>
+    <color name = "campaign_payment_done">#7566E5</color>
+
 
     <color name="black_64">#A6000000</color>
+
+
 </resources>
