--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -79,4 +79,5 @@
     <dimen name="space_8">8dp</dimen>
     <dimen name="space_32">32dp</dimen>
     <dimen name="space_48">48dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
