--- a/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_gp_post_comment_reply_fragment.xml
@@ -25,6 +25,10 @@
                 android:id="@+id/closeImageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
                 android:paddingTop="20dp"
                 android:paddingRight="20dp"
                 android:paddingBottom="20dp"
