--- a/MyCity4Kids/MyCity4Kids/res/layout/explore_topics_grid_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/explore_topics_grid_item.xml
@@ -24,15 +24,15 @@
 
             <ImageView
                 android:id="@+id/tagImageView"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:scaleType="center"
+                android:scaleType="fitXY"
                 android:src="@drawable/default_article" />
 
             <View
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="110dp"
                 android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
