--- a/MyCity4Kids/MyCity4Kids/res/layout/groups_grid_item_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/groups_grid_item_layout.xml
@@ -16,10 +16,9 @@
         android:layout_gravity="center">
 
 
-
         <ImageView
             android:id="@+id/groupImageView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="110dp"
             android:scaleType="fitXY"
             android:src="@drawable/default_article" />
