--- a/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_details_activity.xml
@@ -339,16 +339,16 @@
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/circular_image_bg"
                 android:scaleType="center"
-                app:srcCompat="@drawable/ic_audio_record"
                 android:tint="@color/white"
-                android:visibility="visible" />
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_audio_record" />
 
             <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/audioTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Audio"
+                android:text="AUDIO"
                 android:textColor="@color/white"
                 android:visibility="visible"
                 app:fontName="oswald.ttf" />
