proof work done

--- a/MyCity4Kids/MyCity4Kids/res/drawable/ic_circle_svg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/ic_circle_svg.xml
@@ -3,8 +3,8 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M12,12m-5.7,0a5.7,5.7 0,1 1,11.4 0a5.7,5.7 0,1 1,-11.4 0"
-      android:fillColor="@color/red"
-      android:fillType="evenOdd"/>
+    <path
+        android:fillColor="@color/red"
+        android:fillType="evenOdd"
+        android:pathData="M12,12m-5.7,0a5.7,5.7 0,1 1,11.4 0a5.7,5.7 0,1 1,-11.4 0" />
 </vector>
