--- a/MyCity4Kids/MyCity4Kids/res/drawable/shape_rectangle_grey.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/shape_rectangle_grey.xml
@@ -6,8 +6,8 @@
         <shape>
             <!-- set the shadow color here -->
             <stroke
-                android:width="2dp"
-                android:color="@color/grey_light" />
+                android:width="1dp"
+                android:color="@color/cool_grey" />
 
             <!-- setting the thickness of shadow (positive value will give shadow on that side) -->
 
@@ -27,7 +27,7 @@
     <item>
         <shape>
             <solid android:color="#fff" />
-            <corners android:radius="3dp" />
+            <corners android:radius="10dp" />
         </shape>
     </item>
 </layer-list>
