--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_url_proof_cell.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_url_proof_cell.xml
@@ -7,38 +7,44 @@
 
     <com.mycity4kids.widget.CustomFontEditText
         android:id="@+id/textUrl"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_width="0dp"
+        android:layout_height="41dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:background="@drawable/article_listing_item_border_bg"
-        android:enabled="false"
         android:fontFamily="sans-serif"
         android:hint="Enter page link or Url"
         android:paddingLeft="12dp"
         android:textColor="@color/black"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageDeleteComponent"
+        app:layout_constraintRight_toLeftOf="@+id/imageDeleteComponent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/imageDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="clear"
+        android:textSize="10dp"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/textUrl"
         app:layout_constraintEnd_toEndOf="@+id/textUrl"
-        app:layout_constraintTop_toTopOf="@+id/textUrl"
-        app:srcCompat="@drawable/ic_delete_svg" />
+        app:layout_constraintTop_toTopOf="@+id/textUrl" />
 
     <ImageView
         android:id="@+id/imageApprovedRejected"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/textUrl"
         app:layout_constraintTop_toBottomOf="@+id/textUrl"
         app:srcCompat="@drawable/ic_delete_cross" />
@@ -51,4 +57,24 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageApprovedRejected"
         app:layout_constraintStart_toEndOf="@+id/imageApprovedRejected"
         app:layout_constraintTop_toTopOf="@+id/imageApprovedRejected" />
+
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/imageDeleteComponent"
+        android:layout_width="60dp"
+        android:layout_height="25dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/shape_red_border"
+        android:gravity="center"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:text="DELETE"
+        android:textColor="@color/app_red"
+        android:textSize="14sp"
+        android:visibility="visible"
+        app:fontName="oswald_regular.ttf"
+        app:layout_constraintBottom_toBottomOf="@+id/textUrl"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/textUrl" />
 </android.support.constraint.ConstraintLayout>
