--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
@@ -66,8 +66,8 @@
                 android:background="@drawable/shape_red_fill"
                 android:gravity="right|center_vertical"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp"
                 android:paddingTop="5dp"
+                android:paddingRight="15dp"
                 android:paddingBottom="5dp"
                 android:text="Submit"
                 android:textAllCaps="true"
@@ -166,7 +166,7 @@
                 android:id="@+id/textFaq"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/recyclerUrlProof"
+                android:layout_below="@+id/textAddUrlProof"
                 android:layout_marginTop="20dp"
                 android:paddingLeft="12dp"
                 android:text="FAQS"
@@ -188,6 +188,28 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textFaq"
                 app:layout_constraintVertical_bias="0.0" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textAddUrlProof"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_below="@+id/recyclerUrlProof"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="180dp"
+                android:layout_marginLeft="180dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="180dp"
+                android:layout_marginRight="180dp"
+                android:background="@drawable/shape_rectangle_red"
+                android:gravity="center_vertical|center_horizontal"
+                android:text="+"
+                android:textColor="@color/app_red"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                app:fontName="oswald_regular.ttf" />
         </RelativeLayout>
     </ScrollView>
 
