--- a/MyCity4Kids/MyCity4Kids/res/layout/tracker_list_index.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/tracker_list_index.xml
@@ -3,147 +3,98 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="110dp"
+    android:layout_height="70dp"
+    android:layout_marginLeft="10dp"
     android:weightSum="10">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:weightSum="10">
+    <ImageView
+        android:id="@+id/imageTop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="@+id/imageStatus"
+        app:layout_constraintStart_toStartOf="@+id/imageStatus"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_circle_svg" />
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+    <View
+        android:id="@+id/view1"
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:background="@color/black_15"
+        app:layout_constraintBottom_toTopOf="@+id/imageStatus"
+        app:layout_constraintEnd_toEndOf="@+id/imageStatus"
+        app:layout_constraintStart_toStartOf="@+id/imageStatus"
+        app:layout_constraintTop_toBottomOf="@+id/imageTop" />
 
-            <ImageView
-                android:id="@+id/imageTop"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/ic_circle_svg" />
+    <ImageView
+        android:id="@+id/imageStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/space_10"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/ic_bullet_svg" />
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="55dp"
-                android:background="@color/black_15" />
+    <View
+        android:id="@+id/view3"
+        android:layout_width="1dp"
+        android:layout_height="wrap_content"
+        android:background="@color/black_15"
+        app:layout_constraintEnd_toEndOf="@+id/imageStatus"
+        app:layout_constraintStart_toStartOf="@+id/imageStatus"
+        app:layout_constraintTop_toBottomOf="@+id/imageStatus" />
 
-            <ImageView
-                android:id="@+id/imageStatus"
-                android:layout_width="20dp"
-                android:layout_height="20dp"/>
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/textStatusName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:layout_marginLeft="10dp"
+        app:fontName="oswald_regular.ttf"
+        app:layout_constraintBottom_toBottomOf="@+id/imageStatus"
+        app:layout_constraintStart_toEndOf="@+id/imageStatus"
+        app:layout_constraintTop_toTopOf="@+id/imageStatus" />
 
-            <!--<View-->
-                <!--android:layout_width="1dp"-->
-                <!--android:layout_height="65dp"-->
-                <!--android:background="@color/black_15" />-->
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/textstatusError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/red"
+        android:textSize="8sp"
+        app:fontName="oswald.ttf"
+        app:layout_constraintStart_toStartOf="@+id/textStatusName"
+        app:layout_constraintTop_toBottomOf="@+id/textStatusName" />
 
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/textDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textStatusName"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/shape_rectangle_grey"
+        android:textColor="@color/black"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:textSize="10sp"
+        app:fontName="oswald.ttf"
+        app:layout_constraintTop_toTopOf="@+id/textStatusName" />
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="9">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_weight="5"
-                android:orientation="vertical">
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/textStatusName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginRight="2dp"
-                    android:ellipsize="end"
-                    android:gravity="left"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAllCaps="true"
-                    android:textColor="@color/black"
-                    android:textSize="16sp"
-                    app:fontName="oswald_regular.ttf" />
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/textstatusError"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginRight="2dp"
-                    android:ellipsize="end"
-                    android:gravity="left"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAllCaps="true"
-                    android:textColor="@color/red"
-                    android:textSize="10sp"
-                    app:fontName="oswald.ttf" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|right"
-                android:layout_weight="5"
-                android:orientation="vertical"
-                android:paddingRight="20dp">
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/textDateError"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginLeft="14dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:textAllCaps="true"
-                    android:textColor="@color/black"
-                    android:textSize="10sp"
-                    android:visibility="visible"
-                    app:fontName="oswald.ttf" />
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/textDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginLeft="14dp"
-                    android:background="@drawable/shape_rectangle_grey"
-                    android:paddingLeft="15dp"
-                    android:paddingRight="15dp"
-                    android:textColor="@color/black"
-                    android:textSize="10sp"
-                    app:fontName="oswald.ttf" />
-
-                <com.mycity4kids.widget.CustomFontTextView
-                    android:id="@+id/textasdf"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom"
-                    android:layout_marginEnd="2dp"
-                    android:layout_marginRight="2dp"
-                    android:ellipsize="end"
-                    android:gravity="left"
-                    android:maxLines="1"
-                    android:singleLine="true"
-                    android:textAllCaps="true"
-                    android:textColor="@color/red"
-                    android:textSize="15sp"
-                    app:fontName="oswald.ttf" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-
-    </LinearLayout>
+    <com.mycity4kids.widget.CustomFontTextView
+        android:id="@+id/textDateError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="10sp"
+        android:visibility="visible"
+        app:fontName="oswald.ttf"
+        app:layout_constraintBottom_toTopOf="@+id/textDate"
+        app:layout_constraintEnd_toEndOf="@+id/textDate"
+        app:layout_constraintStart_toStartOf="@+id/textDate" />
 
 </android.support.constraint.ConstraintLayout>
 
