tracker issue done

--- a/MyCity4Kids/MyCity4Kids/res/layout/tracker_list_index.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/tracker_list_index.xml
@@ -81,6 +81,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textSize="10sp"
+        android:visibility="gone"
         app:fontName="oswald.ttf"
         app:layout_constraintTop_toTopOf="@+id/textStatusName" />
 
