--- a/MyCity4Kids/MyCity4Kids/res/values/styles.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/styles.xml
@@ -270,6 +270,10 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="CustomGroupTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="RankPopupMenu" parent="@style/Widget.AppCompat.PopupMenu">
         <item name="android:popupBackground">#f9f9f9</item>
     </style>
