--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupspoll.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_groupspoll.xml
@@ -13,4 +13,139 @@
         android:paddingBottom="60dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <RelativeLayout
+        android:id="@+id/postSettingsContainerMain"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:elevation="6dp"
+        android:visibility="gone">
+
+        <View
+            android:id="@+id/overlayView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:alpha="0.85"
+            android:background="#121212"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:id="@+id/postSettingsContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/blockUserTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.block_this_user"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/savePostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.save_post"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/notificationToggleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="ENABLE NOTIFICATION"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/commentToggleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.disable_comment"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/reportPostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.report_post"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/editPostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.edit_post"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/deletePostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.delete_post"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/pinPostTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:drawablePadding="20dp"
+                android:padding="20dp"
+                android:text="@string/groups.pin_post"
+                android:textColor="@color/groups.light_black_color"
+                android:textSize="16sp"
+                android:visibility="gone"
+                app:fontName="open_sans.ttf" />
+
+        </LinearLayout>
+    </RelativeLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:elevation="6dp"
+        android:visibility="gone" />
 </android.support.design.widget.CoordinatorLayout>
