--- a/MyCity4Kids/MyCity4Kids/res/drawable/unfollow_topic_author_bg.xml
+++ b/MyCity4Kids/MyCity4Kids/res/drawable/unfollow_topic_author_bg.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/app_trans_red" />
+        android:color="#e68c9b" />
 
-    <solid android:color="@color/app_red" />
+    <solid android:color="#fef9fa" />
 
     <padding
         android:left="1dp"
