--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -20,11 +20,11 @@
             <com.mycity4kids.widget.CustomFontTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="30dp"
                 android:layout_marginBottom="20dp"
                 android:text="@string/rewards_personal_header"
                 android:textAllCaps="true"
-                android:layout_gravity="center_horizontal"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp"
                 app:fontName="oswald.ttf" />
@@ -121,15 +121,15 @@
                     android:layout_marginEnd="0dp"
                     android:layout_marginRight="0dp"
                     android:layout_marginBottom="0dp"
-                    android:text="ADD NUMBER AND VERIFY"
                     android:background="@drawable/mainprofile_thin_border"
                     android:gravity="center"
                     android:inputType="number"
                     android:paddingStart="15dp"
                     android:paddingLeft="15dp"
                     android:tag="+91"
-                    android:visibility="gone"
+                    android:text="ADD NUMBER AND VERIFY"
                     android:textColor="@color/app_light_black"
+                    android:visibility="gone"
                     app:fontName="oswald.ttf" />
 
                 <com.mycity4kids.widget.CustomFontTextView
@@ -147,13 +147,13 @@
                     android:layout_marginEnd="0dp"
                     android:layout_marginRight="0dp"
                     android:layout_marginBottom="0dp"
-                    android:text="@string/rewards_mobile_number_verified"
                     android:background="@drawable/mainprofile_thin_border"
                     android:gravity="center_vertical"
                     android:inputType="number"
                     android:paddingStart="15dp"
                     android:paddingLeft="15dp"
                     android:tag="+91"
+                    android:text="@string/rewards_mobile_number_verified"
                     android:textColor="@color/app_light_black"
                     app:fontName="oswald.ttf" />
 
@@ -225,13 +225,13 @@
                     android:layout_below="@+id/textViewLocation"
                     android:layout_marginTop="5dp"
                     android:background="@drawable/mainprofile_thin_border"
+                    android:editable="false"
+                    android:focusable="false"
                     android:hint=""
                     android:inputType="textNoSuggestions"
                     android:paddingStart="15dp"
                     android:paddingLeft="15dp"
                     android:paddingTop="15dp"
-                    android:editable="false"
-                    android:focusable="false"
                     android:paddingBottom="15dp"
                     android:textColor="@color/app_light_black"
                     android:textSize="16dp"
@@ -262,10 +262,10 @@
                     android:layout_marginRight="20dp"
                     android:layout_marginBottom="20dp"
                     android:gravity="center"
-                    android:visibility="gone"
                     android:text="@string/rewards_family_header"
                     android:textColor="@color/app_grey"
                     android:textSize="14sp"
+                    android:visibility="gone"
                     app:fontName="oswald.ttf" />
 
 
@@ -303,9 +303,9 @@
                         android:layout_width="150dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="8dp"
-                        app:layout_constraintRight_toLeftOf="@+id/textDOB"
                         android:background="@drawable/mainprofile_thin_border"
                         app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toLeftOf="@+id/textDOB"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/gender" />
 
@@ -589,8 +589,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rewards_number_of_kids"
-                        android:visibility="gone"
                         android:textColor="@color/app_grey"
+                        android:visibility="gone"
                         app:fontName="oswald_regular.ttf" />
 
                     <android.support.v7.widget.AppCompatSpinner
@@ -628,8 +628,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginRight="16dp"
-                    android:orientation="vertical">
-                </LinearLayout>
+                    android:orientation="vertical"></LinearLayout>
 
                 <include
                     android:id="@+id/layoutDynamicNumberOfKids"
@@ -638,7 +637,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="15dp"
-                    android:visibility="visible"/>
+                    android:visibility="visible" />
 
                 <com.mycity4kids.widget.CustomFontTextView
                     android:id="@+id/textAddChild"
@@ -800,13 +799,13 @@
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
                 android:layout_marginTop="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@color/app_red"
                 android:gravity="center"
                 android:text="@string/save_continue"
                 android:textColor="@color/white"
-                android:layout_marginBottom="10dp"
                 android:textSize="18sp" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
