--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
@@ -9,6 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/Down"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_arrow_drop_down_black_18dp"
+            android:tint="@color/greytxt_color" />
+
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/textQuestion"
             android:layout_width="match_parent"
@@ -18,8 +27,6 @@
             android:layout_marginRight="2dp"
             android:layout_toStartOf="@+id/imageDown"
             android:layout_toLeftOf="@+id/imageDown"
-            android:drawableLeft="@drawable/ic_arrow_drop_down_black_18dp"
-            android:drawableTint="@color/greytxt_color"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:textColor="@color/black"
