--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards_personal_info.xml
@@ -93,6 +93,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
                 android:text="@string/rewards_phone"
+                android:textAllCaps="true"
                 android:textColor="@color/app_grey"
                 android:textSize="14sp"
                 app:fontName="oswald_regular.ttf" />
@@ -181,6 +182,7 @@
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="15dp"
                 android:text="@string/rewards_email"
+                android:textAllCaps="true"
                 android:textColor="@color/app_grey"
                 app:fontName="oswald_regular.ttf" />
 
@@ -215,6 +217,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/rewards_location"
+                    android:textAllCaps="true"
                     android:textColor="@color/app_grey"
                     app:fontName="oswald_regular.ttf" />
 
@@ -282,6 +285,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rewards_gender"
+                        android:textAllCaps="true"
                         android:textColor="@color/app_grey"
                         app:fontName="oswald_regular.ttf"
                         app:layout_constraintStart_toStartOf="parent"
@@ -292,6 +296,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rewards_dob"
+                        android:textAllCaps="true"
                         android:textColor="@color/app_grey"
                         app:fontName="oswald_regular.ttf"
                         app:layout_constraintLeft_toLeftOf="@+id/textDOB"
@@ -303,6 +308,8 @@
                         android:layout_width="150dp"
                         android:layout_height="40dp"
                         android:layout_marginTop="8dp"
+                        app:fontName="oswald_regular.ttf"
+
                         android:background="@drawable/mainprofile_thin_border"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toLeftOf="@+id/textDOB"
@@ -330,6 +337,7 @@
                         android:hint="DD/MM/YYYY"
                         android:paddingLeft="10dp"
                         android:textColor="#000"
+                        app:fontName="oswald_regular.ttf"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/genderSpinner"
                         app:layout_constraintTop_toBottomOf="@id/dobLabelTextView" />
@@ -348,6 +356,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rewards_working_status"
+                        android:textAllCaps="true"
                         android:textColor="@color/app_grey"
                         app:fontName="oswald_regular.ttf" />
 
@@ -371,6 +380,7 @@
                             android:layout_marginLeft="0dp"
                             android:buttonTint="@color/app_red"
                             android:text="@string/rewards_working"
+                            android:textAllCaps="true"
                             android:textColor="@color/app_light_black" />
 
                         <android.support.v7.widget.AppCompatRadioButton
@@ -382,6 +392,7 @@
                             android:layout_marginRight="8dp"
                             android:buttonTint="@color/app_red"
                             android:text="@string/rewards_non_working"
+                            android:textAllCaps="true"
                             android:textColor="@color/app_light_black" />
                     </RadioGroup>
                 </RelativeLayout>
@@ -399,6 +410,8 @@
                         android:layout_centerVertical="true"
                         android:layout_marginTop="15dp"
                         android:text="@string/rewards_language"
+                        android:textAllCaps="true"
+
                         android:textColor="@color/app_grey"
                         app:fontName="oswald_regular.ttf" />
 
@@ -511,6 +524,7 @@
                             android:layout_marginLeft="20dp"
                             android:buttonTint="@color/app_red"
                             android:text="Joint"
+                            android:textAllCaps="true"
                             android:textColor="@color/app_light_black" />
                     </RadioGroup>
                 </RelativeLayout>
@@ -528,6 +542,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/rewards_have_children"
+                        android:textAllCaps="true"
                         android:textColor="@color/app_grey"
                         app:fontName="oswald_regular.ttf" />
 
@@ -628,7 +643,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginRight="16dp"
-                    android:orientation="vertical"></LinearLayout>
+                    android:orientation="vertical" />
 
                 <include
                     android:id="@+id/layoutDynamicNumberOfKids"
@@ -664,6 +679,7 @@
                     android:paddingEnd="15dp"
                     android:paddingRight="15dp"
                     android:text="@string/rewards_are_expecing"
+                    android:textAllCaps="true"
                     android:textColor="@color/app_grey"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/gender" />
@@ -728,6 +744,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginTop="15dp"
                         android:text="@string/rewards_interest"
+                        android:textAllCaps="true"
                         android:textColor="@color/app_grey"
                         app:fontName="oswald_regular.ttf" />
 
@@ -806,7 +823,8 @@
                 android:gravity="center"
                 android:text="@string/save_continue"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                app:fontName="oswald_regular.ttf" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </android.support.constraint.ConstraintLayout>
