proof crash fix

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
@@ -12,9 +12,10 @@
         <ImageView
             android:id="@+id/Down"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/space_30"
             android:layout_alignParentLeft="true"
             android:layout_marginRight="10dp"
+
             android:src="@drawable/ic_arrow_drop_down_black_18dp"
             android:tint="@color/greytxt_color" />
 
@@ -27,10 +28,12 @@
             android:layout_marginRight="2dp"
             android:layout_toStartOf="@+id/imageDown"
             android:layout_toLeftOf="@+id/imageDown"
+            android:layout_toEndOf="@id/Down"
+            android:layout_toRightOf="@id/Down"
             android:ellipsize="end"
-            android:gravity="center_vertical"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:layout_marginTop="@dimen/space_5"
             app:fontName="oswald_regular.ttf" />
 
         <ImageView
