--- a/MyCity4Kids/MyCity4Kids/res/layout/campaign_image_proof_sreenshots.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/campaign_image_proof_sreenshots.xml
@@ -17,8 +17,8 @@
 
         <ImageView
             android:id="@+id/imageScreenshot"
-            android:layout_width="70dp"
-            android:layout_height="50dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="0dp"
@@ -27,7 +27,7 @@
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:layout_marginBottom="0dp"
-
+            android:scaleType="fitXY"
             app:srcCompat="@drawable/ic_add_proof" />
 
         <ImageView
