--- a/MyCity4Kids/MyCity4Kids/res/values/color.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/color.xml
@@ -507,6 +507,8 @@
     <color name="color_979797">#979797</color>
     <color name="color_23CAAD">#23CAAD</color>
     <color name="color_F8FAFB">#F8FAFB</color>
+    <color name="color_F5A623">#F5A623</color>
+    <color name="color_56CD6A">#56CD6A</color>
 
     <color name="black_64">#A6000000</color>
 
