--- a/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/contact_details_layout.xml
@@ -27,14 +27,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:hint=""
             android:inputType="textNoSuggestions"
-            android:paddingBottom="15dp"
             android:paddingLeft="5dp"
             android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:textColor="@color/app_light_black"
             android:textSize="16dp"
             app:fontName="oswald_regular.ttf" />
@@ -54,8 +54,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="15dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
             android:background="@drawable/mainprofile_thin_border">
 
             <com.mycity4kids.widget.CustomFontTextView
@@ -64,9 +64,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
-                android:paddingBottom="10dp"
                 android:paddingLeft="5dp"
                 android:paddingTop="10dp"
+                android:paddingBottom="10dp"
                 android:textColor="@color/app_light_black"
                 android:textSize="16dp"
                 app:fontName="oswald_regular.ttf" />
@@ -77,9 +77,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/emailTextView"
-                android:layout_marginBottom="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="4dp"
+                android:layout_marginBottom="5dp"
                 android:paddingLeft="5dp"
                 android:text="*********"
                 app:fontName="oswald_regular.ttf" />
@@ -89,8 +89,8 @@
                 android:layout_width="50sp"
                 android:layout_height="30sp"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="5dp"
                 android:layout_marginTop="22dp"
+                android:layout_marginRight="5dp"
                 android:background="@drawable/button_round"
                 android:gravity="center"
                 android:text="@string/ad.comments.edit_label"
@@ -106,6 +106,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:text="@string/app_settings.edit_profile.hint_phone"
+            android:textAllCaps="true"
             android:textColor="@color/app_grey"
             app:fontName="oswald_regular.ttf" />
 
@@ -114,8 +115,8 @@
             android:layout_width="match_parent"
             android:layout_height="57dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:gravity="center_vertical"
             android:inputType="number"
@@ -138,13 +139,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:inputType="text"
-            android:paddingBottom="15dp"
             android:paddingLeft="10dp"
             android:paddingTop="15dp"
+            android:paddingBottom="15dp"
             android:textColor="@color/app_light_black"
             app:fontName="oswald_regular.ttf" />
 
@@ -162,13 +163,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
             android:background="@drawable/mainprofile_thin_border"
             android:gravity="center_vertical"
-            android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:textColor="@color/app_light_black"
             android:textSize="14sp"
             app:fontName="oswald_regular.ttf" />
