--- a/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/group_post_detail_activity.xml
@@ -102,7 +102,7 @@
                 android:background="@color/white"
                 android:drawablePadding="20dp"
                 android:padding="20dp"
-                android:text="ENABLE NOTIFICATION"
+                android:text="@string/groups_enable_notification"
                 android:textColor="@color/groups.light_black_color"
                 android:textSize="16sp"
                 app:fontName="open_sans.ttf" />
