--- a/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/profile_about_layout.xml
@@ -102,6 +102,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="15dp"
             android:text="@string/app_settings.edit_profile.hint_phone"
+            android:textAllCaps="true"
             android:textColor="@color/app_grey"
             app:fontName="oswald_regular.ttf" />
         <com.mycity4kids.widget.PrefixEditText
@@ -154,7 +155,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/mainprofile_thin_border"
             android:gravity="center_vertical"
             android:paddingBottom="10dp"
