--- a/MyCity4Kids/MyCity4Kids/res/layout/activity_my_earning.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/activity_my_earning.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -49,10 +50,7 @@
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -99,7 +97,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginBottom="@dimen/space_10"
-                    android:text="11200"
                     android:textColor="@color/white"
                     android:textSize="40sp"
                     app:fontName="open_sans_bold.ttf"
@@ -108,32 +105,68 @@
                     app:layout_constraintTop_toBottomOf="@id/total_amount_title" />
             </LinearLayout>
 
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/payment_history"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/color_F8FAFB"
-                android:paddingLeft="@dimen/space_20"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:text="Payment History"
-                android:textColor="@color/campaign_4A4A4A"
-                android:textSize="20sp"
-                app:fontName="oswald_regular.ttf"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.054"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dashboard_profile" />
+                android:gravity="center"
+                android:orientation="vertical">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/payment_history"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/color_F8FAFB"
+                    android:paddingLeft="@dimen/space_20"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:text="Payment History"
+                    android:textColor="@color/campaign_4A4A4A"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    app:fontName="oswald_regular.ttf" />
 
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerEarnings"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/payment_history" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recyclerEarnings"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:nestedScrollingEnabled="false"
+                    android:visibility="gone" />
+
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/start_campaign_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:paddingLeft="@dimen/space_20"
+                    android:paddingTop="10dp"
+                    android:paddingRight="@dimen/space_20"
+                    android:layout_marginTop="@dimen/space_35"
+                    android:paddingBottom="10dp"
+                    android:text="Please participate in the campaigns to start earning"
+                    android:textColor="@color/color_676767"
+                    android:textSize="20sp"
+                    android:visibility="gone"
+                    app:fontName="open_sans.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/start_campaign_cta"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/space_10"
+                    android:background="@drawable/money_dashboard_green_bg"
+                    android:paddingLeft="@dimen/space_20"
+                    android:paddingTop="10dp"
+                    android:visibility="gone"
+                    android:paddingRight="@dimen/space_20"
+                    android:paddingBottom="10dp"
+                    android:text="Payment History"
+                    android:textAllCaps="true"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    app:fontName="oswald_regular.ttf" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 </LinearLayout>
