--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_item.xml
@@ -66,4 +66,10 @@
             android:visibility="gone"
             app:fontName="oswald_regular.ttf" />
     </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/light_underline"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
