--- a/MyCity4Kids/MyCity4Kids/res/layout/recycler_myearning.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/recycler_myearning.xml
@@ -46,6 +46,8 @@
             android:layout_marginTop="@dimen/space_5"
             android:layout_toRightOf="@id/brandImageView"
             android:text="@string/total_earning"
+            android:layout_toLeftOf="@+id/payment_status"
+            android:layout_marginRight="@dimen/space_5"
             android:textColor="@color/campaign_expired"
             android:textSize="14sp"
             app:fontName="open_sans.ttf" />
@@ -77,7 +79,9 @@
             android:textSize="13sp"
             app:fontName="open_sans.ttf" />
 
+
     </RelativeLayout>
+
 
     <RelativeLayout
         android:id="@+id/second"
@@ -221,4 +225,12 @@
                 app:fontName="open_sans_bold.ttf" />
         </RelativeLayout>
     </RelativeLayout>
+
+
+    <View
+        android:id="@+id/separator_view"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_alignParentBottom="true"
+        android:background="@color/light_underline"/>
 </RelativeLayout>
